tests/api/reference/negative/13-toml-syntax.asm
const invalid = toml.parse("name = [")
